--- a/tests/elt_bronze_notificacoes.ipynb
+++ b/tests/elt_bronze_notificacoes.ipynb
@@ -10,12 +10,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "605ca50b",
+   "execution_count": 28,
+   "id": "cdba7443",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "605ca50b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Mostra todas as colunas, sem limite\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -28,13 +38,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "1cbb535e",
+   "execution_count": 37,
+   "id": "7919ab23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\\\Users\\\\silma\\\\OneDrive\\\\Área de Trabalho\\\\Mestrado\\\\vigimed\\\\data\\\\01_bronze\\notificacoes\\2025_07_14_10_05_49.parquet\n"
+     ]
+    }
+   ],
    "source": [
-    "file_path = r'C:\\\\Users\\\\silma\\\\Downloads\\\\2025_06_30_14_17_00\\\\'\n",
-    "final_path = r\"C:\\\\Users\\\\silma\\\\OneDrive\\\\Área de Trabalho\\\\Mestrado\\\\vigimed\\\\data\\\\01_bronze\""
+    "layer ='01_bronze'\n",
+    "dataset = 'notificacoes'\n",
+    "ts = datetime.now().strftime(\"%Y_%m_%d_%H_%M_%S\") #'2025_06_30_14_17_00'\n",
+    "input = r'C:\\\\Users\\\\silma\\\\Downloads\\\\' \n",
+    "output = r\"C:\\\\Users\\\\silma\\\\OneDrive\\\\Área de Trabalho\\\\Mestrado\\\\vigimed\\\\data\\\\\"+layer+\"\\\\\"+dataset+\"\\\\\"+ts+\".parquet\"\n",
+    "print(output)"
    ]
   },
   {
@@ -42,12 +64,12 @@
    "id": "06bca818",
    "metadata": {},
    "source": [
-    "# Notificacoes"
+    "# Input"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "id": "34fe1cfa",
    "metadata": {},
    "outputs": [
@@ -65,7 +87,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(file_path+'\\\\VigiMed_Notificacoes.csv', \n",
+    "df = pd.read_csv(input+'\\\\VigiMed_Notificacoes.csv', \n",
     "                 encoding='latin-1', \n",
     "                 sep=';', \n",
     "                 header=0, \n",
@@ -77,105 +99,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "79b9e8a9",
+   "metadata": {},
+   "source": [
+    "# Output"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "e3c25b9d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_parquet(final_path+\"\\\\notificacoes\\\\2025_06_30_14_17_00.parquet\", compression=\"snappy\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "92be1365",
-   "metadata": {},
-   "source": [
-    "# Medicamentos"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "57805308",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: [IDENTIFICACAO_NOTIFICACAO, RELACAO_MEDICAMENTO_EVENTO, NOME_MEDICAMENTO_WHODRUG, PRINCIPIOS_ATIVOS_WHODRUG, CODIGO_ATC, DETENTOR_REGISTRO, CONCENTRACAO, COMPONENTE_SUSPEITO, ACAO_ADOTADA, PROBLEMAS_ADICIONAIS_RELCIONADOS_MEDICAMENTO, INDICACAO_MEDDRA, INDICACAO_RELATADA_NOTIFICADOR_INICIAL, DOSE, FREQUENCIA_DOSE, POSOLOGIA, DURACAO, INICIO_ADMINISTRACAO, FIM_ADMINISTRACAO, FORMA_FARMACEUTICA, VIA_ADMINISTRACAO, VIA_ADMINISTRACAO_MAE_PAI, NUMELO_LOTE]\n",
-      "Index: []\n"
-     ]
-    }
-   ],
-   "source": [
-    "df2 = pd.read_csv(file_path+'\\\\VigiMed_Medicamentos.csv', \n",
-    "                 encoding='latin-1', \n",
-    "                 sep=';', \n",
-    "                 header=0, \n",
-    "                 dtype=str,\n",
-    "                 low_memory=False\n",
-    "                 )\n",
-    "\n",
-    "print(df2.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "ae88641a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df2.to_parquet(final_path+\"\\\\medicamentos\\\\2025_06_30_14_17_00.parquet\", compression=\"snappy\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d4d4f26a",
-   "metadata": {},
-   "source": [
-    "# Reações"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "732f73fa",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: [IDENTIFICACAO_NOTIFICACAO, REACAO_EVTO_ADVERSO_MEDDRA_LLT, PT, HLT, HLGT, SOC, DATA_INICIO_HORA, DATA_FINAL_HORA, DURACAO, GRAVE, GRAVIDADE, DESFECHO]\n",
-      "Index: []\n"
-     ]
-    }
-   ],
-   "source": [
-    "df3 = pd.read_csv(file_path+'\\\\VigiMed_Reacoes.csv', \n",
-    "                 encoding='latin-1', \n",
-    "                 sep=';', \n",
-    "                 header=0, \n",
-    "                 dtype=str,\n",
-    "                 low_memory=False\n",
-    "                 )\n",
-    "\n",
-    "print(df3.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "a6fc8728",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df3.to_parquet(final_path+\"\\\\reacoes\\\\2025_06_30_14_17_00.parquet\", compression=\"snappy\", index=False)"
+    "df.to_parquet(output, compression=\"snappy\", index=False)"
    ]
   }
  ],
